<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:background="@color/white">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/profileImageView"
        android:layout_width="450dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        app:roundedCornerRadius="12dp"
        android:background="@drawable/rec_round_stock_trans" />


    <LinearLayout
        android:id="@+id/rr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImageView"
        android:layout_marginTop="10dp"
        android:background="@drawable/rec_round_stock_trans"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Age"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cityStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rr2"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@+id/rr1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/declineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/skip_red_24dp"
            app:backgroundTint="@android:color/white"
            app:fabSize="auto"
            app:rippleColor="#22ED7563" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/like_green_24dp"
            app:backgroundTint="@android:color/white"
            app:fabSize="auto"
            app:rippleColor="#226FE2B3" />


    </LinearLayout>

    <TextView
        android:layout_below="@id/rr2"
        android:marqueeRepeatLimit="marquee_forever"
        android:id="@+id/acceptanceResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Message"
        android:textColor="#ff0000"
        android:textSize="24sp" />




</RelativeLayout>